feat: completed frontend design
- Need to add subscription functionality.

--- a/client/src/pages/home.module.css
+++ b/client/src/pages/home.module.css
@@ -35,6 +35,12 @@
     animation-delay: 4s; /* Delay matches the duration of the h1 animation */
 }
 
+.fadeIn {
+     opacity: 0; /* Start transparent */
+     animation: fadeIn 2s ease-out forwards;
+     animation-delay: 4s; /* Delay matches the duration of the h1 animation */   
+}
+
 /* Keyframes for fading in with pixel movement */
 @keyframes pixelFadeIn {
     from {
